# jewelry

./: .gitignore  Cargo.toml  README.md  crates.js  search-index.js  settings.html  sidebar-items.js  source-files.js  token
client/: index.html
futures_util/: all.html  index.html  sidebar-items.js
gateway/: index.html  sidebar-items.js
http/: index.html  sidebar-items.js  struct.HttpClient.html
hyper_tls/: struct.HttpsConnecting.html
jewelry/: all.html  index.html
reqwest/: all.html  index.html  struct.Body.html  struct.ClientBuilder.html  struct.Method.html  struct.Response.html  struct.StatusCode.html  struct.Url.html
src/: client.rs  gateway.rs  http.rs  lib.rs
tokio/: index.html
tokio_tungstenite/: all.html  enum.Connector.html  enum.MaybeTlsStream.html  fn.accept_async.html  fn.accept_async_with_config.html  fn.accept_hdr_async.html  fn.accept_hdr_async_with_config.html  fn.client_async.html  fn.client_async_tls.html  fn.client_async_tls_with_config.html  fn.client_async_with_config.html  fn.connect_async.html  fn.connect_async_tls_with_config.html  fn.connect_async_with_config.html  index.html  sidebar-items.js  struct.WebSocketStream.html
tungstenite/: all.html  enum.Connector.html  enum.Message.html  fn.accept.html  fn.accept_hdr.html  fn.accept_hdr_with_config.html  fn.accept_with_config.html  fn.client_tls.html  fn.client_tls_with_config.html  index.html  sidebar-items.js
typenum/: macro.op.html  type.False.html  type.N1.html  type.N10.html  type.N100.html  type.N1000.html  type.N10000.html  type.N100000.html  type.N1000000.html  (+3270 more)
(+6821 files in other folders)
