[package]
name = "jewelry"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
tokio = { version = "1.21", features = ["full"] }
url = "2.3.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
